[package]
authors = ['zhiwei.w.luo']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'nft-acala'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
log = { default-features = false, version = '0.4.0' }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
orml-nft = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', default-features = false }

sp-core = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }
sp-std = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'sp-std/std',
	'sp-runtime/std',
    'frame-support/std',
    'frame-system/std',
    'orml-nft/std',
]