# FIXME: ORML WORKSHOP LINK
[package]
name = 'pallet-swap'
description = 'Simple orderbook based swap pallet'
repository = 'https://github.com/xlc/orml-workshop/'
authors = ['zhiwei.w.luo']
version = '2.0.0'
edition = '2018'

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }

orml-traits = { default-features = false, version = '0.3.0' }
orml-utilities = { default-features = false, version = '0.3.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'orml-traits/std',
    'orml-utilities/std'
]